Fixed more spacing issues

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 body {
-    max-width: 1000px;
+    max-width: 1024px;
     margin: 0 auto;
-    min-width: 350px;
     background-color: #d9d9d9;
     font-family: sans-serif;
     box-shadow: 0px 0px 1px 0px;
@@ -41,7 +40,7 @@ header h1, header p {
 
 main section {
     flex: 3;
-    min-width: 350px;
+    min-width: 320px;
     background-color: #ffffff;
 }
 
@@ -52,7 +51,7 @@ main article {
 
 main aside {
     flex: 1;
-    min-width: 125px;
+    min-width: 200px;
     background-color: #f9cf00;
 }
 main ul {
@@ -62,7 +61,9 @@ main p {
     padding: 0 0 0 0;
     text-align: justify;
 }
-
+main li {
+    margin: 0 0 5px 0;
+}
 }
 footer {
     background-color: #d9d9d9;
